# cpf

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Detection.cmake  InstallLocations.cmake  LICENSE  LICENSE.txt  Naming.cmake  Notes.txt  README.md  appveyor.yml
Application/: CMakeLists.txt
Application/IDL/: iApplication.idl
Application/Include/Application/: Arguments.hpp
Application/Include/CPF/: Application.hpp
Application/Include/Platform/: Platform.hpp
Application/Source/: Application.cpp  Arguments.cpp  ConsoleCommands.cpp
Atomic/: CMakeLists.txt
Atomic/Include/Atomic/: Fence.hpp
Atomic/UnitTest/: Test_All.hpp
CPF/: CMakeLists.txt
CPF/Application/: CMakeLists.txt  LICENSE  README.md
CPF/Application/Source/: Application.cpp
CPF/BuildTools/idl/: CMakeLists.txt
CPF/CMake/: InstallLocations.cmake  Naming.cmake
CPF/CMake/Checks/: Windows.cmake
CPF/CMake/Settings/: Dialect.cmake  General.cmake  Optimize.cmake  Settings.cmake
CPF/CMake/Templates/: plugin_binary.txt
CPF/CMake/Utilities/: CheckValue.cmake  GenGOM.cmake  PreferredInclude.cmake  TypedLibrary.cmake
CPF/CSBinding/Source/: AssemblyInfo.cpp
CPF/Core/Source/: DataBlock.cpp  DataBlockBuilder.cpp
CPF/Core/Tests/: Test_Crc.cpp  Test_DataBlock.cpp  Test_DeferredEmitter.cpp  Test_Directory.cpp  Test_Emitter.cpp  Test_EnumFlagType.cpp  Test_FXXx4_1.cpp  Test_FXXx4_4.cpp  Test_Factory.cpp  Test_File.cpp  Test_Future.cpp  Test_Globbing.cpp  Test_HandleProvider.cpp  Test_Matrix22v.cpp  Test_Option.cpp  Test_Outcome.cpp  Test_PackedPool.cpp  Test_Plugin.cpp  Test_PoolVector.cpp  Test_Reactor.cpp  Test_SSE4_1_Utilities.cpp  Test_Scoped.cpp  Test_StaticPlugin.cpp  Test_Value.cpp  Test_Vector2v.cpp  Test_Vector3v.cpp  TimeTestFixture.hpp
CPF/Examples/Example_Console/: CMakeLists.txt
CPF/Examples/Example_EventDriven/: CMakeLists.txt
CPF/ICore/: CMakeLists.txt
CPF/ICore/IDL/: iApplication.idl
CPF/IDL/IO/: Origin.idl  iFile.idl  iFileStream.idl  iStream.idl
CPF/IDL/Plugin/: iRegistry.idl
CPF/Include/CPF/: Configuration.hpp  EnumFlagType.hpp  IO.hpp  IntrusivePtr.hpp  Plugin.hpp
CPF/KPI/RayTracer/: CMakeLists.txt
CPF/Libraries/: CMakeLists.txt
CPF/Libraries/Core/: CMakeLists.txt
CPF/Libraries/Platform/: CMakeLists.txt
CPF/Plugins/: CMakeLists.txt
CPF/Plugins/BuildTools/: CMakeLists.txt
CPF/Plugins/Drivers/: CMakeLists.txt
CPF/Plugins/Platform/: CMakeLists.txt
CPF/Source/IO/: Directory.cpp  File.cpp  FileSystem.cpp  Globbing.cpp  IO.cpp  Path.cpp  Stream.cpp  TextReader.cpp
CPF/Source/Plugin/: Registry.cpp
CPF/Tests/: IOTestFixture.hpp  Test_Bool4.cpp  Test_Directory.cpp  Test_Emitter.cpp  Test_FXXx4_3.cpp  Test_File.cpp  Test_FixedPoint.cpp  Test_Future.cpp  Test_GOM.cpp  Test_Globbing.cpp  Test_IO.cpp  Test_Matrix33v.cpp  Test_Path.cpp  Test_Plugin.cpp  Test_StaticPlugin.cpp  Test_TextReader.cpp  Test_Thread.cpp  Test_Unit_Us.cpp  Test_Value.cpp  TimeTestFixture.hpp
CPF/Tests/TestPlugin/: TestPlugin.cpp  iTestPlugin.hpp
CPF/Tools/idl/: CMakeLists.txt  IDLLexer.g4
CSBinding/: CMakeLists.txt
CSBinding/Source/: CSharpBindings.cpp
Collections/: CMakeLists.txt
Collections/Include/: Algorithm.hpp  Array.hpp  BitSet.hpp  Collections.hpp  Deque.hpp  HandlePool.hpp  List.hpp  Memory.hpp  Move.hpp  Pair.hpp  Stack.hpp  String.hpp  StringUtils.hpp  Tuple.hpp  UnorderedSet.hpp  Vector.hpp
Collections/UnitTest/: Test_HandlePool.hpp  Test_PacketStream.cpp
Core/: CMakeLists.txt
Core/Atomic/: CMakeLists.txt
Core/Atomic/Source/: Atomic.cpp
Core/Collections/Include/: Functional.hpp  List.hpp  PacketStream.hpp  Queue.hpp  Set.hpp  Tuple.hpp  UnorderedMap.hpp
Core/Collections/Source/: Collections.cpp
Core/Collections/UnitTest/: Test_All.hpp
Core/Configuration/: CMakeLists.txt
Core/Configuration/UnitTest/: Test_All.hpp
Core/IDL/GOM/: ResultCodes.idl  iEventEmitter.idl  iUnknown.idl
Core/IDL/IO/: Access.idl  Attributes.idl  iDirectory.idl  iExecutor.idl  iFile.idl  iFileStream.idl  iStream.idl
Core/IDL/Plugin/: iClassFactory.idl  iRegistry.idl
Core/Include/CPF/: Configuration.hpp  DataBlock.hpp  DataBlockBuilder.hpp  IO.hpp  IntrusivePtr.hpp  Logging.hpp  Math.hpp  Option.hpp  Outcome.hpp  Plugin.hpp  SemVer.hpp  Time.hpp  iRefCounted.hpp
Core/Memory/Source/: Memory.cpp
Core/RefCount/Include/: IntrusivePtr.hpp
Core/Simd/UnitTest/: Test_Int8x16.hpp
Core/Source/: CPF.cpp  DataBlock.cpp  DataBlockBuilder.cpp
Core/Source/IO/: BinaryReader.cpp  BinaryWriter.cpp  Directory.cpp  File.cpp  FileSystem.cpp  Globbing.cpp  IO.cpp  Stream.cpp  (+2 more)
Core/Tests/: IOTestFixture.hpp  Test_BitManipulation.cpp  Test_CodeGen.cpp  Test_ConditionVariable.cpp  Test_DataBlock.cpp  Test_DeferredEmitter.cpp  Test_Different_Unit_Comparison.cpp  Test_Directory.cpp  Test_FXXx4_2.cpp  Test_Factory.cpp  Test_File.cpp  Test_Globbing.cpp  Test_HandlePool.cpp  Test_HandleProvider.cpp  Test_HashID.cpp  Test_IndexedPool.cpp  Test_LargeVector.cpp  Test_Math.cpp  Test_Matrix44v.cpp  Test_Mutex.cpp  Test_Option.cpp  Test_Outcome.cpp  Test_PackedPool.cpp  Test_Path.cpp  Test_PerformanceTracker.cpp  Test_Plugin.cpp  Test_Quaternion.cpp  Test_Reactor.cpp  Test_ScratchAllocator.cpp  Test_Semaphore.cpp  Test_SparseVector.cpp  Test_StaticPlugin.cpp  Test_ThreadLocal.cpp  Test_Unit_Us.cpp  Test_Utf8String.cpp  Test_Vector3.cpp  Test_Vector3v.cpp  Test_Vector4v.cpp
Core/Utilities/: 010_CPFS.bt  010_DataBlock.bt
Cpf/: CMakeLists.txt
Cpf/Experimental/: CMakeLists.txt
Cpf/KPI/: CMakeLists.txt
Cpf/Libraries/: CMakeLists.txt
Cpf/Plugins/: CMakeLists.txt
Cpf/Support/: CMakeLists.txt
Graphics/Metal/: CMakeLists.txt
Graphics/Vulkan/: CMakeLists.txt
KPI/: CMakeLists.txt
KPI/RayTracer/: CMakeLists.txt
Logging/: CMakeLists.txt
Math/: CMakeLists.txt
Math/Source/: Utilities.cpp
Math/UnitTest/: Test_All.hpp  Test_Matrix33v.cpp  Test_Vector2.cpp
Platform/Attributes/: CMakeLists.txt
RefCount/: CMakeLists.txt
RefCount/Include/: IntrusivePtr.hpp  RefCounted.hpp
RefCount/Source/: RefCount.cpp
Tools/idl/: CMakeLists.txt  IDLLexer.g4  IDLParser.g4
(+2770 files in other folders)
